# CppServerProject

./: CMakeLists.txt  INSTALL.md  Makefile  README.md
clientFolder/: client.cc  client.h  start_client.cc
serverFolder/: server.cc  server.h  server_start.cc
